@@ -1,6 +1,12 @@
-# ChangeLog for media-tv/rygel
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# ChangeLog for media-plugins/gst-teletext
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*gst-teletext-0.0.1_pre2 (20 Feb 2011)
+
+  20 Feb 2011; Florian Steinel <fsteinel@gentoo.de.flonet.net>
+  +gst-teletext-0.0.1_pre2.ebuild:
+  New snapshot
 
 *gst-teletext-0.0.1_pre1 (04 Oct 2009)
 
